--- a/GarageLogic/GarageLogic.csproj
+++ b/GarageLogic/GarageLogic.csproj
@@ -45,6 +45,7 @@
     <Compile Include="EnumClass.cs" />
     <Compile Include="Garage.cs" />
     <Compile Include="IGasVehicle.cs" />
+    <Compile Include="RegularBike.cs" />
     <Compile Include="Track.cs" />
     <Compile Include="Vehicle.cs" />
     <Compile Include="Wheel.cs" />
