--- a/GarageLogic/GarageLogic.csproj
+++ b/GarageLogic/GarageLogic.csproj
@@ -43,10 +43,10 @@
     <Compile Include="Car.cs" />
     <Compile Include="ElectricBike.cs" />
     <Compile Include="ElectricCar.cs" />
-    <Compile Include="IElectricVehicle.cs" />
+    <Compile Include="ElectricEngine.cs" />
     <Compile Include="EnumClass.cs" />
     <Compile Include="Garage.cs" />
-    <Compile Include="IGasVehicle.cs" />
+    <Compile Include="GasEngine.cs" />
     <Compile Include="RegularBike.cs" />
     <Compile Include="RegularCar.cs" />
     <Compile Include="Track.cs" />
