--- a/GarageLogic/Ex03.GarageLogic.csproj
+++ b/GarageLogic/Ex03.GarageLogic.csproj
@@ -48,6 +48,7 @@
     <Compile Include="EnumClass.cs" />
     <Compile Include="Garage.cs" />
     <Compile Include="GarageManager.cs" />
+    <Compile Include="RegularTrack.cs" />
     <Compile Include="ValueOutOfRangeException.cs" />
     <Compile Include="VehicleInGarage.cs" />
     <Compile Include="FuelTank.cs" />
