--- a/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
+++ b/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
@@ -35,5 +35,16 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GarageLogic\Ex03.GarageLogic.csproj">
+      <Project>{e9f7b006-e799-402b-9ea8-bb1b3b969eb3}</Project>
+      <Name>Ex03.GarageLogic</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="MainMenu.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="UserInterface.cs" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
